Main configuration done